k8s/image-handler-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-handler-service
  namespace: ai-image-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-handler-service
  template:
    metadata:
      labels:
        app: image-handler-service
    spec:
      containers:
        - name: image-handler-service
          image: aiimageprocacr.azurecr.io/image-handler-service:latest
          ports:
            - containerPort: 2740
---
apiVersion: v1
kind: Service
metadata:
  name: image-handler-service
  namespace: ai-image-processor
spec:
  selector:
    app: image-handler-service
  ports:
    - protocol: TCP
      port: 2740
      targetPort: 2740
  type: ClusterIP
