k8s/image-processor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-processor-service
  namespace: ai-image-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-processor-service
  template:
    metadata:
      labels:
        app: image-processor-service
    spec:
      containers:
        - name: image-processor-service
          image: aiimageprocacr.azurecr.io/image-processor-service:latest
          ports:
            - containerPort: 7540
---
apiVersion: v1
kind: Service
metadata:
  name: image-processor-service
  namespace: ai-image-processor
spec:
  selector:
    app: image-processor-service
  ports:
    - protocol: TCP
      port: 7540
      targetPort: 7540
  type: ClusterIP
